<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/txtPoids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/voir_progression_rappel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtPoids"
        android:layout_alignBottom="@+id/txtPoids"
        android:layout_toLeftOf="@+id/txtPoids"
        android:text="@string/poids_" />

    <EditText
        android:id="@+id/txtTaille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtPoids"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:onClick="onClickDate" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTaille"
        android:layout_alignLeft="@+id/voir_progression_rappel"
        android:text="@string/taille_" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_marginBottom="89dp"
        android:layout_toLeftOf="@+id/txtEvenement"
        android:text="@string/evenement_" />

    <EditText
        android:id="@+id/txtEvenement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:onClick="onClick"
        android:text="@string/ajouter" />

</RelativeLayout>